# /qompassai/turbo/Cargo.toml
# Qompass AI Turbo Cargo Config
# Copyright (C) 2025 Qompass AI, All rights reserved
# ###################################################
[workspace]
resolver = "3"
members = ["qinvaders"]

[dependencies]

[dev-dependencies]
# [[bin]]
# name = "{{crate_name}}"
# path = "src/main.rs"

[profile.dev]
opt-level = 3
debug = true

[profile.release]
codegen-units = 1
incremental = false
lto = "thin"
opt-level = 3
panic = "abort"
strip = "debuginfo"
overflow-checks = true
