# Cargo.toml
# Qompass AI Q-Invaders Cargo Config
# Copyright (C) 2025 Qompass AI, All rights reserved
####################################################
[package]
name = "space-invaders"
version = "1.0.0"
edition = "2021"

[dependencies]
turbo = { version = "4.0.0e = "turbo-genesis-sdk" }

[lib]
crate-type = ["cdylib"]

[lints.rust]
unexpected_cfgs = { level = "allow" }
